Apply sonarlint suggestions